# python-pytest-testing-project-79

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
page_loader/: __init__.py  cli.py  download.py  page_loader.py
tests/: test_page_loader.py
