[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page loader utility"
authors = [
    { name = "Nick Pauler", email = "nickpauler.pro@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_loader"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
