[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_loader"]

[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page loader project for Hexlet"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests",
                "beautifulsoup4"]

[project.optional-dependencies]
dev = ["pytest",
       "requests-mock",
       "pytest-cov"]

[project.scripts]
page-loader = "page_loader.cli:main"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(levelname)s [%(name)s]: %(message)s"